@@ -40,6 +40,7 @@ Change to the desired sheet, if an address is entered in the location combobox.
 Do not leave reference selection mode after selecting a cell (range).
 Fix the position of the function auto-completion popup.
 Fix default cell height: Let cell with two-lined text obscure only two rows.
+Fix the function auto-completion: Close the hint label properly and do not crash, if there's no help text.
 
 Developer-Visible Only
 ----------------------
